# OpenClam_Multi-Agent_Investment_Advisory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  environment.yml  news_macro_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/agent_outputs/q4_2025_ai_tech/: README.md
data/agent_outputs/q4_2025_ai_tech/cio/: AAOI.json  AAPL.json  ADBE.json  ALAB.json  AMAT.json  AMD.json  AMT.json  AMZN.json  ANET.json  APP.json  ARM.json  ASML.json  ASTS.json  AVGO.json  CEG.json  CLS.json  COHR.json  CORZ.json  CRM.json  CRWD.json  DDOG.json  DELL.json  DLR.json  DRAM.json  EQIX.json  ETN.json  FLEX.json  GEV.json  GOOGL.json  INOD.json  IREN.json  IRM.json  KLAC.json  LITE.json  LRCX.json  MDB.json  META.json  MRVL.json  MSFT.json  MU.json  (+24 more)
data/agent_outputs/q4_2025_ai_tech/contexts/: AAOI.json  AAPL.json  ADBE.json  ALAB.json  AMAT.json  AMD.json  AMT.json  AMZN.json  ANET.json  APP.json  ARM.json  ASML.json  ASTS.json  AVGO.json  CEG.json  CLS.json  COHR.json  CORZ.json  CRM.json  CRWD.json  DDOG.json  DELL.json  DLR.json  DRAM.json  EQIX.json  ETN.json  FLEX.json  GEV.json  GOOGL.json  INOD.json  IREN.json  (+33 more)
docs/: evaluation_plan.md  news_macro_agent.md  proposal_summary.md  rubric_checklist.md  system_design.md  troubleshooting.md
notebooks/: 01_news_macro_agent_demo.ipynb  02_market_technical_agent_demo.ipynb  03_fundamental_agent.ipynb  04_single_ticker_cio_demo.ipynb  05_q4_2025_expanded_eval.ipynb
src/openclam/evaluation/: q4_earnings_cache.py
tests/: test_cache_workflow.py  test_cio_agent.py  test_evaluation_helpers.py
(+294 files in other folders)
