[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclam-investment-advisory"
version = "0.1.0"
description = "A lightweight multi-agent LLM system for event-driven US equity research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yfinance",
  "requests",
  "openai",
  "pandas",
  "numpy",
  "matplotlib",
  "python-dotenv",
  "beautifulsoup4",
  "html5lib",
  "lxml",
]

[project.optional-dependencies]
gemini = ["google-genai"]
vertex = ["google-genai"]
all = ["google-genai"]

[tool.setuptools.packages.find]
where = ["src"]
